[package]
name = "revent"
version = "0.28.0"
license = "LGPL-3.0"
description = "Event system for Rust"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/revent"
repository = "https://github.com/BourgondAries/revent.git"
homepage = "https://github.com/BourgondAries/revent.git"
keywords = ["event", "stacked", "borrow"]

[dev-dependencies]
criterion = "0.3.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[features]
trace = []

[[bench]]
name = "basic"
harness = false

[profile.bench]
codegen-units = 1
lto = true
